force-app/main/default/email_log_auditor/objects/AuditLogEntry__c/AuditLogEntry__c.object-meta.xml
<CustomObject>
    <description>Audit record of unmatched or failed CSV rows during Email Log batch processing. Used by admins to investigate processing gaps.</description>
    <label>Audit Log Entry</label>
    <nameField>
        <label>Audit Log Entry Name</label>
        <type>AutoNumber</type>
        <displayFormat>ALE-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Audit Log Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>