force-app/main/default/email_log_auditor/objects/AuditLogEntry__c/fields/EntryType__c.field-meta.xml
<CustomField>
    <fullName>EntryType__c</fullName>
    <description>Reason this row was written to the audit log.</description>
    <label>Entry Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unmatched</fullName>
                <default>true</default>
                <label>Unmatched</label>
            </value>
            <value>
                <fullName>MissingMessageId</fullName>
                <label>Missing Message-Id</label>
            </value>
            <value>
                <fullName>ParseError</fullName>
                <label>Parse Error</label>
            </value>
            <value>
                <fullName>OrphanedEmailMessage</fullName>
                <label>Orphaned EmailMessage</label>
            </value>
            <value>
                <fullName>PollRequest</fullName>
                <label>Poll Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>