force-app/main/default/email_log_auditor/objects/AuditLogEntry__c/fields/FailureReason__c.field-meta.xml
<CustomField>
    <fullName>FailureReason__c</fullName>
    <description>Free-text description of why the row was written to the audit log.</description>
    <label>Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>