force-app/main/default/email_log_auditor/objects/AuditLogEntry__c/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <description>RFC Message-Id value from the unmatched CSV row, if present.</description>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>