force-app/main/default/email_log_auditor/objects/AuditLogEntry__c/fields/RawCsvRow__c.field-meta.xml
<CustomField>
    <fullName>RawCsvRow__c</fullName>
    <description>Verbatim copy of the CSV row content for forensic analysis.</description>
    <label>Raw CSV Row</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>