force-app/main/default/email_log_auditor/objects/AuditLogEntry__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <description>Recipient email address from the CSV row.</description>
    <label>Recipient</label>
    <type>Email</type>
</CustomField>