force-app/main/default/email_log_auditor/objects/AuditLogEntry__c/fields/RowNumber__c.field-meta.xml
<CustomField>
    <fullName>RowNumber__c</fullName>
    <description>1-based line number within the source CSV.</description>
    <label>Row Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>