force-app/main/default/email_log_auditor/objects/AuditLogEntry__c/fields/SendDate__c.field-meta.xml
<CustomField>
    <fullName>SendDate__c</fullName>
    <description>Send timestamp from the CSV row.</description>
    <label>Send Date</label>
    <type>DateTime</type>
</CustomField>