force-app/main/default/email_log_auditor/objects/AuditLogEntry__c/fields/SourceFile__c.field-meta.xml
<CustomField>
    <fullName>SourceFile__c</fullName>
    <description>The EmailLogFile__c whose CSV contained this row.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source File</label>
    <referenceTo>EmailLogFile__c</referenceTo>
    <relationshipLabel>Audit Log Entries</relationshipLabel>
    <relationshipName>AuditLogEntries</relationshipName>
    <type>Lookup</type>
</CustomField>